kubernetes/apps/homeassistant/app/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homeassistant
  namespace: homeassistant
  labels:
    app.kubernetes.io/name: homeassistant
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: homeassistant
  template:
    metadata:
      name: homeassistant
      labels:
        app.kubernetes.io/name: homeassistant
    spec:
      containers:
        - name: homeassistant
          image: ghcr.io/home-assistant/home-assistant:2026.10.0@sha256:1b64d38f38d922bf9d59336451fd6453e1d614f934456af4ee3d2a51061be3a4
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: hass-config
              mountPath: /config
            - name: config-file
              mountPath: /config/configuration.yaml
              subPath: configuration.yaml
          resources:
            requests:
              cpu: 290m
              memory: 800Mi
            limits:
              memory: 800Mi
        - name: zwave-js-ui
          image: ghcr.io/zwave-js/zwave-js-ui:11.24.3@sha256:3fef66d575ea0ea9d50aad3e05c36619228557cfa888557eac2035215a29a321
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8091
              name: http
              protocol: TCP
            - containerPort: 3000
              name: websocket
              protocol: TCP
          resources:
            requests:
              cpu: 200m
              memory: 250Mi
              devic.es/zwave-hub: "1"
            limits:
              memory: 250Mi
              devic.es/zwave-hub: "1"
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
          volumeMounts:
            - mountPath: /dev/zwave
              name: zwavestick
            - mountPath: /usr/src/app/store
              name: zwave-data
      volumes:
        - name: hass-config
          persistentVolumeClaim:
            claimName: hass-config
        - name: config-file
          configMap:
            name: homeassistant-configuration
        - name: zwavestick
          hostPath:
            path: /dev/zwave-hub
        - name: zwave-data
          persistentVolumeClaim:
            claimName: zwave-data
