kubernetes/apps/homeassistant/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gatus.home-operations.com/endpoint: |
      name: "Home Assistant"
  name: homeassistant-ui
  namespace: homeassistant
spec:
  hostnames: ["homeassistant.${SECRET_DOMAIN}"]
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: homeassistant
          namespace: homeassistant
          port: 8123
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gatus.home-operations.com/endpoint: |
      name: "Z-wave JS"
  name: zwave-ui
  namespace: homeassistant
spec:
  hostnames: ["zwave.${SECRET_DOMAIN}"]
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: homeassistant
          namespace: homeassistant
          port: 8091
      matches:
        - path:
            type: PathPrefix
            value: /
